compilers/ID/cool/regression/BASE_cgtest/old_cool/oldmet.cl.stderr
Class Main is not defined.
./BASE_cgtest/oldmet.cl:5: Inferred return type Int of method init does not conform to declared return type SELF_TYPE.
./BASE_cgtest/oldmet.cl:16: Inferred return type Int of method init does not conform to declared return type SELF_TYPE.
./BASE_cgtest/oldmet.cl:27: Inferred return type Int of method init does not conform to declared return type SELF_TYPE.
Compilation halted due to static semantic errors.
